<resources>
    <string name="app_name">QuickScores</string>
    <string name="nav_header_desc">Quickscores</string>
    <string name="email">scores@quickscores.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Home">Home team</string>
    <string name="Away">Away team</string>
    <string name="HomeGoals">-</string>
    <string name="AwayGoals">-</string>
    <string name="Time">Time</string>
    <string name="HomeLogo">Home Logo</string>
    <string name="AwayLogo">Away Logo</string>
    <string name="league">League</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="referee">Referee</string>
    <string name="city">City</string>
    <string name="stats">Statistics</string>
    <string name="possession">Possession</string>
    <string name="possession_percent">60%</string>
    <string name="ontarget_shots">Shots on Target</string>
    <string name="ontarget_shots_number">5</string>
    <string name="fouls">Fouls</string>
    <string name="fouls_number">5</string>
    <string name="countries">Countries</string>
    <string name="tables">Standings</string>
    <string name="leagues">Leagues</string>
    <string name="all">All</string>
    <string name="cancelled_match">CANC</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="GoalKeeper">GoalKeeper</string>
    <string name="left_back">Left Back</string>
    <string name="right_back">Right Back</string>
    <string name="centre_back_1">Centre Back 1</string>
    <string name="centre_back_2">Centre Back 2</string>
    <string name="mid_fielder_1">Mid 1</string>
    <string name="mid_fielder_2">Mid 2</string>
    <string name="winger_1">Winger 1</string>
    <string name="winger_2">Winger 2</string>
    <string name="forward_1">Forward 1</string>
    <string name="forward_2">Forward 2</string>
    <string name="subs">Substitutes</string>
    <string name="sub_1">Sub 1</string>
    <string name="sub_2">Sub 2</string>
    <string name="sub_3">Sub 3</string>
    <string name="sub_4">Sub 4</string>
    <string name="sub_5">Sub 5</string>
    <string name="sub_6">Sub 5</string>
    <string name="manager_name">Coach Name</string>
    <string name="starting_lineup">Starting lineup</string>
    <string name="player_number">12</string>
    <string name="formation">433</string>
    <string name="league_name">League Title</string>
    <string name="rank">#</string>
    <string name="team_name">Name</string>
    <string name="points">PTS</string>
    <string name="logo">Img</string>
    <string name="team_points">50</string>
    <string name="notification_dialog">No fixtures available for this day,Scroll to another day!</string>
    <string name="first_half">First Half</string>
    <string name="second_half">Second Half</string>
    <string name="half_time">Half Time</string>
    <string name="full_time">Full Time</string>
    <string name="cancelled">Cancelled</string>
    <string name="postponed">Postponed</string>
    <string name="extra_time">Extra Time</string>
    <string name="added_extra_time">Added Extra Time</string>
    <string name="break_time">Break Time</string>
    <string name="penalties">Penalties</string>
    <string name="abandoned">Abandoned</string>
    <string name="interrupted">Interrupted</string>
    <string name="results_only">RO</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">Back drawable</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_icon">Favorites Icon</string>
    <string name="_0">0</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome">Welcome to Quickscores\n\nFor scores, stats and analytics for the sport you love — Football</string>
    <string name="select_to_add_teams_players_and_leagues_to_your_favorites">Select * to add teams, players, and leagues to your favorites</string>
    <string name="add_favourtites">Add favourites</string>
    <string name="select_your_favourite_teams_or_players_to_personalise_your_football_experience">Select your favourite teams or players to personalise your football experience.</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="skip">Skip</string>
    <string name="item_name">item_name</string>
    <string name="premier_league">Premier League</string>

</resources>