<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/matchFragment"
        android:title="@string/all"
        android:icon="@drawable/baseline_sports_soccer_24"/>

<!--    <item-->
<!--        android:id="@+id/countriesFragment"-->
<!--        android:title="@string/countries"-->
<!--        android:icon="@drawable/baseline_south_america_24"/>-->
<!--    <item-->
<!--        android:id="@+id/leagueTableFragment"-->
<!--        android:title="@string/tables"-->
<!--        android:icon="@drawable/baseline_table_view_24"/>-->
    <item
        android:id="@+id/allLeaguesFragment"
        android:title="@string/leagues"
        android:icon="@drawable/trophy_svgrepo_com"/>
    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/favorites"
        android:icon="@drawable/baseline_star_border_24"/>
</menu>