<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FixtureFragment"
    android:id="@+id/main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/leagueName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/league"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/matchHolder"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            android:padding="20dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/homeTeamLogo"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/imageholder"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/homeTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Home"
                    android:layout_below="@id/homeTeamLogo"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/matchDate"
                    android:text="@string/date"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/venue"
                    android:text="@string/venue"
                    android:layout_below="@id/matchDate"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/awayTeamLogo"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/imageholder"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/awayTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Away"
                    android:layout_below="@id/awayTeamLogo"
                    android:layout_marginEnd="20dp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            app:tabGravity="fill"
            android:background="@color/black"
            app:tabIndicatorColor="@android:color/white"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
